--- a/WinCorePatPranali/src/app/common/directives/acc-search/acc-search.component.html
+++ b/WinCorePatPranali/src/app/common/directives/acc-search/acc-search.component.html
@@ -6,7 +6,7 @@
                     <div class="row">
                         <div class="col-md-12 search-box-color mb-2">
                             <div class="row">
-                                <div class="col-md-4 position-relative form-group">
+                                <div class="col-md-5 position-relative form-group">
                                     <label for="txtCode" class="">General Ledger </label>
                                     <div class="input-group">
                                         <ngx-select-dropdown [config]="config" tabindex="1" [options]="generalLedgers"
@@ -14,13 +14,13 @@
                                         </ngx-select-dropdown>
                                     </div>
                                 </div>
-                                <div class="col-md-4 position-relative form-group">
+                                <div class="col-md-5 position-relative form-group">
                                     <label for="txtCode" class="">Account Search </label>
                                     <input tabindex="28" type="text" class="form-control" placeholder="Account Number"
                                         formControlName="searchText">
                                 </div>
-                                <div class="col-md-3 position-relative form-group" style="margin-top: 30px;">
-                                    <button class="btn btn-info" tabindex="2" (click)="searchAccount()"><i
+                                <div class="col-md-2 position-relative form-group" style="display: grid; margin-top: 30px;">
+                                    <button class="btn btn-info" style="float: right;" tabindex="2" (click)="searchAccount()"><i
                                             class="fa fa-search"></i> Search</button>
                                 </div>
                             </div>
