--- a/WinCorePatPranali/src/app/common/directives/cust-search/cust-search.component.css
+++ b/WinCorePatPranali/src/app/common/directives/cust-search/cust-search.component.css
@@ -1,6 +1,6 @@
-.search-box-color{
+/* .search-box-color{
     background-color: #f5f5f5;
     border-radius: 5px;
     border: 2px solid #f5f5f5;
     margin-bottom: 2px;
-}
+} */
