--- a/WinCorePatPranali/src/app/common/directives/cust-search/cust-search.component.html
+++ b/WinCorePatPranali/src/app/common/directives/cust-search/cust-search.component.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12 search-box-color">
         <div class="row">
 
-            <div class="col-md-4 position-relative">
+            <div class="col-md-6 position-relative form-group">
                 <label for="txtCode" class="">Search Customer By </label>
                 <select class="mb-2 form-control" tabindex="1" formControlName="searchBy">
                     <option *ngFor="let uiCustomerSearch of uiCustomerSearchBy" [ngValue]="uiCustomerSearch.code">
@@ -10,21 +10,26 @@
                     </option>
                 </select>
             </div>
-            <div class="col-md-4 position-relative">
-                <label for="txtCode" class="">Search Text </label>
-                <input tabindex="4" type="text" class="form-control" autocomplete="off"
-                    placeholder="Enter search text.." formControlName="searchText">
+            <div class="col-md-6 position-relative form-group">
+                <label for="txtCode" class="">Customer Search Text </label>
+                <ng-autocomplete
+                    placeHolder="Enter search text"
+                    [data]="uiCustomers"
+                    [searchKeyword]="keyword"
+                    [itemTemplate]="itemTemplateStatic"
+                    (selected)='selectEvent($event)'
+                    (inputChanged)='onChangeSearch($event)'>
+                </ng-autocomplete>
+
+                <ng-template #itemTemplateStatic let-item>
+                    <a [innerHTML]="item.customerCodeStr +'-'+ item.custName"></a>
+                  </ng-template>
             </div>
 
-            <div class="col-md-3 position-relative form-group" style="display: grid; margin-top: 30px;">
-                <!-- <button class="btn btn-left-margin10 btn-danger" style="float: right;" tabindex="2"
-                    (click)="clear()">
-                    Clear</button>
-                <button class="btn btn-left-margin10 btn-warning" style="float: right;" tabindex="2"
-                    (click)="addNewCustomer()"><i class="fa fa-plus"></i> Add New Customer </button> -->
+            <!-- <div class="position-relative form-group" style="display: grid; margin-top: 30px;width: 26%;">
                 <button class="btn btn-info" style="float: right;" tabindex="2" (click)="searchCustomer()"><i
                         class="fa fa-search"></i> Search</button>
-            </div>
+            </div> -->
         </div>
     </div>
 </form>
