--- a/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-types/gold-loan/gold-loan.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-types/gold-loan/gold-loan.component.html
@@ -1,19 +1,21 @@
 <div>
     <form [formGroup]="goldLoanForm" #form="ngForm">
+        
+        
         <div class="row">
             <div class="col-md-12">
                 <h5 class="card-title">Gold Details</h5>
             </div>
             <div class="col-md-12">
                 <div class="tab-content">
-                    <div class="row">
-
-
-                        <div class="col-md-3 position-relative form-group">
+    
+                    <div class="row" style="margin-bottom: 10px;">
+    
+                        <div class="col-md-2 position-relative form-group">
                             <label for="txtCode" class="">Receipt No <span class="mandatory">*</span></label>
                             <input tabindex="1" type="text" class="form-control" formControlName="receiptNo">
                         </div>
-                        <div class="col-md-3 position-relative form-group">
+                        <div class="col-md-2 position-relative form-group">
                             <label for="txtCode" class="">Gold Type <span class="mandatory">*</span></label>
                             <select class="form-control" tabindex="2" formControlName="goldType">
                                 <option *ngFor="let uigoldType of uigoldTypes" [ngValue]="uigoldType.id">
@@ -21,56 +23,40 @@
                                 </option>
                             </select>
                         </div>
-                        <div class="col-md-3 position-relative form-group">
+                        <div class="col-md-2 position-relative form-group">
                             <label for="txtCode" class="">Gross Weight <span class="mandatory">*</span></label>
                             <div class="input-group">
                                 <input tabindex="3" type="number" class="form-control" formControlName="grossWeight">
                                 <div class="input-group-append"><span class="input-group-text">Gram</span></div>
                             </div>
                         </div>
-                        <div class="col-md-3 position-relative form-group">
+                        <div class="col-md-2 position-relative form-group">
                             <label for="txtCode" class="">Net Weight <span class="mandatory">*</span></label>
                             <div class="input-group">
                                 <input tabindex="4" type="number" class="form-control" formControlName="netWeight">
                                 <div class="input-group-append"><span class="input-group-text">Gram</span></div>
                             </div>
                         </div>
-                        <div class="col-md-3 position-relative form-group">
+                        <div class="col-md-2 position-relative form-group">
                             <label for="txtCode" class="">Rate Per Gram <span class="mandatory">*</span></label>
                             <input tabindex="5" type="number" class="form-control" formControlName="ratePerGram">
                         </div>
-                        <div class="col-md-3 position-relative form-group">
-                            <label for="txtCode" class="">Period <span class="mandatory">*</span></label>
-                            <div class="input-group">
-                                <input tabindex="6" type="number" class="form-control" formControlName="periodInMonths">
-                                <div class="input-group-append"><span class="input-group-text">Months</span></div>
+                        <div class="col-md-2 position-relative form-group">
+                            <div style="display: flex; margin-top: 25px;">
+                                <button class="mt-1 btn btn-primary" (click)="addGold()" tabindex="9">Add</button>
+                                <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clearGold()"
+                                    tabindex="10">Clear</button>
                             </div>
                         </div>
-                        <div class="col-md-3 position-relative form-group">
-                            <label for="txtCode" class="">Paid On <span class="mandatory">*</span></label>
-                            <input tabindex="7" type="date" class="form-control" formControlName="paidDate">
-                        </div>
-                        <div class="col-md-3 position-relative form-group">
-                            <label for="txtCode" class="">Expiry Date <span class="mandatory">*</span></label>
-                            <input tabindex="8" type="date" class="form-control" formControlName="expiryDate">
-                        </div>
                         <!-- <div class="col-md-3 position-relative form-group">
-                            <label for="txtCode" class="">Amount</label>
-                            <input tabindex="1" type="text" class="form-control"
-                                formControlName="amount">
-                        </div> -->
+                                <label for="txtCode" class="">Amount</label>
+                                <input tabindex="1" type="text" class="form-control"
+                                    formControlName="amount">
+                            </div> -->
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
-                <div class="row">
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <button class="mt-1 btn btn-primary" (click)="addGold()" tabindex="9">Add</button>
-                        <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clearGold()"
-                            tabindex="10">Clear</button>
-                    </div>
-                </div>
-            </div>
+           
             <div class="col-md-12">
                 <div class="tab-content">
                     <div class="row">
@@ -120,5 +106,46 @@
                 </div>
             </div>
         </div>
+        <div class="divider"></div>
+        <div class="row">
+            <div class="col-md-3 position-relative form-group">
+                <label for="txtCode" class="">Interest Rate <span class="mandatory">*</span></label>
+                <input tabindex="1" type="number" class="mb-2 form-control" formControlName="interestRate" min="0"
+                    onKeyPress="if(this.value.length >=3) return false;">
+            </div>
+    
+            <div class="col-md-3 position-relative form-group">
+                <label for="txtCode" class="">Amount Advances <span class="mandatory">*</span></label>
+                <input tabindex="1" type="number" min="0" class="form-control" formControlName="amountAdvances">
+            </div>
+    
+            <div class="col-md-3 position-relative form-group">
+                <label for="txtCode" class="">Changes In Interest Rate Applicable</label>
+                <select class="mb-2 form-control" tabindex="1" formControlName="changesInInterestApplicable">
+                    <option *ngFor="let uiChangesInInterestRate of uiChangesInInterestRateYN"
+                        [ngValue]="uiChangesInInterestRate.code">
+                        {{uiChangesInInterestRate.name}}
+                    </option>
+                </select>
+            </div>
+            <div class="col-md-3 position-relative form-group">
+                <label for="txtCode" class="">Period <span class="mandatory">*</span></label>
+                <div class="input-group">
+                    <input tabindex="6" type="number" class="form-control" formControlName="periodInMonths"
+                        (change)="modifyMaturityDate()">
+                    <div class="input-group-append"><span class="input-group-text">Months</span></div>
+                </div>
+            </div>
+            <div class="col-md-3 position-relative form-group">
+                <label for="txtCode" class="">Paid On <span class="mandatory">*</span></label>
+                <input tabindex="7" type="date" class="form-control" formControlName="paidDate"
+                    (change)="modifyMaturityDate()">
+            </div>
+            <div class="col-md-3 position-relative form-group">
+                <label for="txtCode" class="">Maturity Date <span class="mandatory">*</span></label>
+                <input tabindex="8" type="date" class="form-control" formControlName="maturityDate">
+            </div>
+        </div>
+
     </form>
 </div>
