--- a/WinCorePatPranali/src/app/common/directives/cust-search/cust-search.component.html
+++ b/WinCorePatPranali/src/app/common/directives/cust-search/cust-search.component.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12 search-box-color">
         <div class="row">
 
-            <div class="col-md-6 position-relative form-group">
+            <div class="position-relative form-group" style="width: 37% !important;">
                 <label for="txtCode" class="">Search Customer By </label>
                 <select class="mb-2 form-control" tabindex="1" formControlName="searchBy">
                     <option *ngFor="let uiCustomerSearch of uiCustomerSearchBy" [ngValue]="uiCustomerSearch.code">
@@ -10,7 +10,7 @@
                     </option>
                 </select>
             </div>
-            <div class="col-md-6 position-relative form-group">
+            <div class="position-relative form-group" style="width: 37% !important;">
                 <label for="txtCode" class="">Customer Search Text </label>
                 <ng-autocomplete
                     placeHolder="Enter search text"
@@ -26,10 +26,10 @@
                   </ng-template>
             </div>
 
-            <!-- <div class="position-relative form-group" style="display: grid; margin-top: 30px;width: 26%;">
+            <div *ngIf="allowMultiSearch" class="position-relative form-group" style="display: grid; margin-top: 30px;height: 50%; width: 26% !important;">
                 <button class="btn btn-info" style="float: right;" tabindex="2" (click)="searchCustomer()"><i
                         class="fa fa-search"></i> Search</button>
-            </div> -->
+            </div>
         </div>
     </div>
 </form>
