--- a/WinCorePatPranali/src/app/screens/accounts/saving-accounts/saving-accounts.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/saving-accounts/saving-accounts.component.html
@@ -25,7 +25,8 @@
                             </div>
                         </div>
                         <div class="col-md-6 position-relative">
-                            <app-cust-search tabindex="3" [ngClass]="{'disabled': !isAddMode}" (customers)="getCustomers($event)">
+                            <app-cust-search tabindex="3" [ngClass]="{'disabled': !isAddMode}"
+                             (customers)="getCustomers($event)" [allowMultiSearch]="false">
                             </app-cust-search>
                         </div>
                         <!-- <div class="col-md-12 position-relative">
@@ -503,7 +504,8 @@
                                     <div class="tab-content">
                                         <div class="row">
                                             <div class="col-md-6 position-relative form-group">
-                                                <app-cust-search tabindex="40" (customers)="getCustomersForJoint($event)">
+                                                <app-cust-search tabindex="40" (customers)="getCustomersForJoint($event)"
+                                                [allowMultiSearch]="false">
                                                 </app-cust-search>
                                             </div>
 
